--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,7 @@ header {
 /* hero */
 
 .hero {
-  padding: 200px 252px;
+  padding: 200px;
   background-color: #2f303a;
   color: var(--white-color);
   text-align: center;
@@ -152,6 +152,9 @@ header {
 
 .hero-title {
   margin-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -202,6 +205,10 @@ header {
 
 .advantage-block {
   display: flex;
+}
+
+.advantage-block .item {
+  width: 270px;
 }
 
 .advantage-block .item:not(:last-child) {
@@ -259,8 +266,8 @@ header {
 }
 
 .team-title {
-  padding-top: 30px;
-  padding-bottom: 10px;
+  margin-top: 30px;
+  margin-bottom: 10px;
 
   color: var(--title-text-color);
   font-weight: 500;
@@ -288,7 +295,7 @@ header {
 }
 
 .position {
-  padding-bottom: 10px;
+  margin-bottom: 30px;
 
   font-size: 16px;
   line-height: 1.19;
@@ -334,7 +341,7 @@ main {
 }
 
 .button-filter {
-  padding: 10px 32px;
+  padding: 6px 22px;
   border: none;
   background-color: #f5f4fa;
   border-radius: 4px;
@@ -358,7 +365,7 @@ main {
 
 .logo-footer {
   display: block;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   color: var(--white-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
